add handle read body of POST request

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,5 +50,6 @@
         "optional": "cpp",
         "unordered_map": "cpp",
         "vector": "cpp"
-    }
+    },
+    "editor.formatOnSave": true,
 }
